# uma-receipt-generator-web

./: .env  .env.example  .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  Trunk.toml  compose.yml  front-builder.dockerfile  server.dockerfile
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: deploy-ec2.yml
front/: Cargo.toml  index.html  index.scss  package-lock.json
front/src/: app.rs  component.rs  main.rs  route.rs
front/src/component/: button.rs  footer.rs  image_selector.rs  image_sorter.rs  merge_form.rs  sorting_image.rs  toggle_button.rs
front/src/route/: home.rs
server/: Cargo.toml  build.rs
server/src/: main.rs  route.rs
server/src/controller/: receipt.rs
src/: controller.rs  error.rs  main.rs  route.rs
src/controller/: receipt.rs
