[package]
name = "uma-receipt-generator"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.16.0"
actix-web = "4.3.1"
actix-multipart = "0.6"
shuttle-actix-web = "0.16.0"
tokio = "1.28.1"
chrono = "0.4"
chrono-tz = "0.8"
log = "0.4"
image = "0.24"
mime = "0.3"
uuid = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.10"
serde_json = "1.0"
derive_more = "0.99"
thiserror = "1.0.40"
actix-web-validator = "5.0"
uma-details-utility = { path = "../uma-details-utility" }
