[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yew_styles = { version = "0.11" }
stylist = { version = "0.12", features = ["yew_integration"] }
web-sys = "0.3"
js-sys = "0.3"
gloo = "0.8"
reqwest = { version = "0.11", features = ["multipart"] }
anyhow = "1.0"
base64 = "0.21"
