[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = "1.28"
chrono = "0.4"
chrono-tz = "0.8"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
image = "0.24"
mime = "0.3"
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.10"
serde_json = "1.0"
derive_more = "0.99"
anyhow = "1.0"
thiserror = "1.0.40"
actix-web-validator = "5.0"
uma-details-utility = { path = "../uma-details-utility" }
